--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,7 @@ jobs:
     name: Download csv
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - name: cURL request
         run: |
           set -x
