--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,11 @@ jobs:
           CSV_URL=`curl -f -L https://www.gov.uk/government/publications/register-of-licensed-sponsors-workers | grep -Eo "https?://(.*)\.csv"`
           curl -o sponsoring-firms.csv -z sponsoring-firms.csv $CSV_URL
           git add sponsoring-firms.csv
+          sudo apt install python3-pip
+          pip install --upgrade csvtotable
+          export PATH=$PATH:~/.local/bin
+          csvtotable sponsoring-firms.csv index.html
+          git add index.html
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: csv adding back to repo [skip ci] another test
