--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
           set -x
           ls -ltr
           CSV_URL=`curl -f -L https://www.gov.uk/government/publications/register-of-licensed-sponsors-workers | grep -Eo "https?://(.*)\.csv"`
-          curl -o sponsoring-firms.csv -z sponsoring-firms.csv $CSV_URL
+          curl -o sponsoring-firms.csv $CSV_URL
           git add sponsoring-firms.csv
           sudo apt install python3-pip
           pip install --upgrade csvtotable
