click google search added

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
           csvtotable sponsoring-firms.csv index.html
           HTML=`curl -f -L https://raw.githubusercontent.com/ozkanpakdil/ozkanpakdil.github.io/master/_includes/google_analytics.html|tr '\n' ' '`
           sed -i "s~<\/body>~$HTML<\/body>~g" index.html
-          DATE=${date}
+          DATE=`date`
           sed -i "s~<caption>Table</caption>~<caption>Company list from $DATE</caption>~g" index.html
           echo links.js >> index.html
           git add index.html
