click google search added

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           rm index.html
           csvtotable sponsoring-firms.csv index.html
           HTML=`curl -f -L https://raw.githubusercontent.com/ozkanpakdil/ozkanpakdil.github.io/master/_includes/google_analytics.html|tr '\n' ' '`
-          sed -i "s~<\/body>~$HTML~g" index.html
+          sed -i "s~<\/body>~</style>$HTML~g" index.html
           sed -i "s~<\/html>~ ~g" index.html
           DATE=`date`
           sed -i "s~<caption>Table</caption>~<caption>Company list from $DATE</caption>~g" index.html
