click google search added

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,8 @@ jobs:
           sed -i "s~<\/body>~</style>$HTML~g" index.html
           sed -i "s~<\/html>~ ~g" index.html
           DATE=`date`
-          sed -i "s~<caption>Table</caption>~<caption>Company list from $DATE</caption>~g" index.html
+          sed -i "s~<caption>Table</caption>~<caption>Sponsor Company list from $DATE</caption>~g" index.html
+          sed -i "s~<title>Table</title>~<caption>Sponsor Company list from $DATE</caption>~g" index.html
           cat link.html >> index.html
           
           git add index.html
