--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
           DATE=`date`
           sed -i "s~<caption>Table</caption>~<caption>Sponsor Company list from $DATE</caption>~g" index.html
           sed -i "s~<title>Table</title>~<title>Sponsor Company list from $DATE</title>~g" index.html
+          sed -i "s~</head>~<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7072273676024711" crossorigin="anonymous"></script></head>~g" index.html
+          
           cat link.html >> index.html
           
           git add index.html
